deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cerbos-demo-service
  labels:
    run: nginx
spec:
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
  selector:
    app: cerbos-demo-graphql
